--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                     </p>
                     <p class="txt txt_04">
                       <span>※</span>
-                      <span class="txt_sub">一部対象外の地域があります。詳しくは<a href="#" class="link">こちら</a>をご確認ください。</span>
+                      <span class="txt_sub">一部対象外の地域があります。詳しくは<a href="https://www.docomo.ne.jp/service/world/roaming/charge/" class="link">こちら</a>をご確認ください。</span>
                     </p>
                     <p class="txt txt_05">
                       <span>※</span>
@@ -350,13 +350,13 @@
                     <div class="js-anima-up button_col">
                       <p class="button_title is-blue">新たにドコモを契約する方</p>
                       <div class="button_list">
-                        <a href="#" class="c-button01 button is-blue">SIMのみで契約する<span class="note">おトクなキャンペーン実施中</span></a>
-                        <a href="#" class="c-button01 button is-blue">機種を一緒に購入する</a>
+                        <a href="https://onlineshop.smt.docomo.ne.jp/supports/max_plan_guide/index.html?xcid=OLS_max_plan_guide_from_CRP_202506_max_poikatsu-max_kokusai_sim-only&utm_source=crp&utm_medium=owned&utm_campaign=ols_202506_max_poikatsu-max_kokusai&utm_content=202506_max_poikatsu-max_max_plan_guide_kokusai_sim-only" class="c-button01 button is-blue">SIMのみで契約する<span class="note">おトクなキャンペーン実施中</span></a>
+                        <a href="https://onlineshop.smt.docomo.ne.jp/supports/max_plan_guide/index.html?model=1&xcid=OLS_max_plan_guide_from_CRP_202506_max_poikatsu-max_kokusai_with_product&utm_source=crp&utm_medium=owned&utm_campaign=ols_202506_max_poikatsu-max_kokusai&utm_content=202506_max_poikatsu-max_max_plan_guide_kokusai_with_product" class="c-button01 button is-blue">機種を一緒に購入する</a>
                       </div>
                     </div>
                     <div class="js-anima-up button_col">
                       <p class="button_title is-red">ドコモを契約中の方</p>
-                      <a href="#" class="c-button01 button is-red">プラン変更へ進む</a>
+                      <a href="https://mydocomo.docomo.ne.jp/procedure/process?pid=201&xcid=OLT_procedure_process_from_CRP_max_poikatsu-max_plan_kokusai" target="_blank" class="c-button01 button is-red">プラン変更へ進む</a>
                     </div>
                   </div>
                   <div class="js-anima-up button_note">
@@ -474,10 +474,10 @@
                 <div class="box_footer">
                   <div class="button_wrap">
                     <div class="js-anima-up button_col">
-                      <a href="#" class="c-button01 button is-blue">詳細はこちら</a>
+                      <a href="https://ahamo.com/special/lp/003.html" class="c-button01 button is-blue">詳細はこちら</a>
                     </div>
                     <div class="js-anima-up button_col">
-                      <a href="#" class="c-button01 button is-red">お申込みはこちら</a>
+                      <a href="https://ahamo.com/store/pub/application/type/" target="_blank" class="c-button01 button is-red">お申込みはこちら</a>
                     </div>
                   </div>
                 </div>
@@ -489,7 +489,7 @@
                   <img class="icon icon_01" src="/special_contents/kokusai/docomo_kokusai/images/tab3_icon_01.svg" width="295" height="288" loading="lazy" alt="">
                   <img class="icon icon_02" src="/special_contents/kokusai/docomo_kokusai/images/tab3_icon_02.svg" width="185" height="267" loading="lazy" alt="">
                   <p class="note pc">
-                    ※一部対象外プランあり。適用条件は<a href="https://www.docomo.ne.jp/service/world/roaming/charge/web.html#anc-01" class="note_link">こちら</a>
+                    ※一部対象外プランあり。適用条件は<a href="https://www.docomo.ne.jp/service/world/roaming/sonomama-giga/" class="note_link">こちら</a>
                   </p>
                   <picture>
                     <source media="(max-width: 767px)" srcset="/special_contents/kokusai/docomo_kokusai/images/tab3_img_01_sp.jpg" width="708" height="2132">
@@ -555,10 +555,10 @@
                 <div class="box_footer">
                   <div class="button_wrap">
                     <div class="js-anima-up button_col">
-                      <a href="#" class="c-button01 button is-blue">詳細はこちら</a>
+                      <a href="https://www.docomo.ne.jp/special_contents/kokusai/sonomama-giga/?utm_source=corp&utm_medium=other&utm_campaign=corp_202508_from-corp-other-to-crp-spe-kokusai-sonomama-giga-250704" class="c-button01 button is-blue">詳細はこちら</a>
                     </div>
                     <div class="js-anima-up button_col">
-                      <a href="#" class="c-button01 button is-red">お申込みはこちら</a>
+                      <a href="https://mydocomo.docomo.ne.jp/procedure/process?pid=386" target="_blank" class="c-button01 button is-red">お申込みはこちら</a>
                     </div>
                   </div>
                   <div class="js-anima-up button_note">
@@ -585,7 +585,7 @@
                 </div>
                 <div class="js-anima-up box_banner">
                   <div class="banner">
-                    <a href="#">
+                    <a href="https://www.docomo.ne.jp/service/world/roaming/giga-shihodai/">
                       <picture>
                         <source media="(max-width: 767px)" srcset="/special_contents/kokusai/docomo_kokusai/images/tab3_banner_01_sp.png" width="703" height="284">
                         <img class="c_w_100" src="/special_contents/kokusai/docomo_kokusai/images/tab3_banner_01.png" width="660" height="182" loading="lazy" alt="データ量を気にせずとことん使える世界ギガし放題詳しくはこちら">
@@ -619,13 +619,13 @@
             <div class="button_col">
               <p class="button_title is-blue">新たにドコモを契約する方</p>
               <div class="button_list">
-                <a href="#" class="c-button01 button is-blue">SIMのみで<br class="sp">契約する<span class="note">おトクな<br class="sp">キャンペーン実施中</span></a>
-                <a href="#" class="c-button01 button is-blue">機種を一緒に<br class="sp">購入する</a>
+                <a href="https://onlineshop.smt.docomo.ne.jp/supports/max_plan_guide/index.html?xcid=OLS_max_plan_guide_from_CRP_202506_max_poikatsu-max_kokusai_sim-only&utm_source=crp&utm_medium=owned&utm_campaign=ols_202506_max_poikatsu-max_kokusai&utm_content=202506_max_poikatsu-max_max_plan_guide_kokusai_sim-only" class="c-button01 button is-blue">SIMのみで<br class="sp">契約する<span class="note">おトクな<br class="sp">キャンペーン実施中</span></a>
+                <a href="https://onlineshop.smt.docomo.ne.jp/supports/max_plan_guide/index.html?model=1&xcid=OLS_max_plan_guide_from_CRP_202506_max_poikatsu-max_kokusai_with_product&utm_source=crp&utm_medium=owned&utm_campaign=ols_202506_max_poikatsu-max_kokusai&utm_content=202506_max_poikatsu-max_max_plan_guide_kokusai_with_product" class="c-button01 button is-blue">機種を一緒に<br class="sp">購入する</a>
               </div>
             </div>
             <div class="button_col">
               <p class="button_title is-red">ドコモを契約中の方</p>
-              <a href="#" class="c-button01 button is-red">プラン変更<br class="sp">へ進む</a>
+              <a href="https://mydocomo.docomo.ne.jp/procedure/process?pid=201&xcid=OLT_procedure_process_from_CRP_max_poikatsu-max_plan_kokusai" target="_blank" class="c-button01 button is-red">プラン変更<br class="sp">へ進む</a>
             </div>
           </div>
         </div>
@@ -635,10 +635,10 @@
         <div class="navi_under_wrap">
           <div class="button_wrap">
             <div class="button_col">
-              <a href="#" class="c-button01 button is-blue">詳細はこちら</a>
+              <a href="https://ahamo.com/special/lp/003.html" class="c-button01 button is-blue">詳細はこちら</a>
             </div>
             <div class="button_col">
-              <a href="#" class="c-button01 button is-red">お申込みはこちら</a>
+              <a href="https://ahamo.com/store/pub/application/type/" target="_blank" class="c-button01 button is-red">お申込みはこちら</a>
             </div>
           </div>
         </div>
@@ -648,10 +648,10 @@
         <div class="navi_under_wrap">
           <div class="button_wrap">
             <div class="button_col">
-              <a href="#" class="c-button01 button is-blue">詳細はこちら</a>
+              <a href="https://www.docomo.ne.jp/special_contents/kokusai/sonomama-giga/?utm_source=corp&utm_medium=other&utm_campaign=corp_202508_from-corp-other-to-crp-spe-kokusai-sonomama-giga-250704" class="c-button01 button is-blue">詳細はこちら</a>
             </div>
             <div class="button_col">
-              <a href="#" class="c-button01 button is-red">お申込みはこちら</a>
+              <a href="https://mydocomo.docomo.ne.jp/procedure/process?pid=386" target="_blank" class="c-button01 button is-red">お申込みはこちら</a>
             </div>
           </div>
         </div>
