--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 
       <div class="sec_content">
         <div class="c_inner">
-          <div class="tab_wrap">
+          <div class="js_tab_wrap tab_wrap">
             <div class="js-anima-up tab_heading">
               <div class="item is-blue">
                 <p class="text">海外データ通信特典</p>
