--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <meta name="twitter:card" content="summary_large_image">
     <meta property="og:type" content="article">
     <meta property="og:url" content="https://www.docomo.ne.jp/special_contents/kokusai/docomo_kokusai/">
-    <meta property="og:image" content="https://www.docomo.ne.jp/special_contents/kokusai/docomo_kokusai/images/sns.png?v=241028">
+    <meta property="og:image" content="/special_contents/kokusai/docomo_kokusai/images/bnr_sns.png">
     <meta property="og:title" content="ドコモのスマホは海外でもそのまま使える | NTTドコモ">
     <meta property="og:description" content="ドコモ MAX・ahamo・世界そのままギガ | ニーズに合わせた料金プランや定額オプションが充実！">
     <meta property="og:site_name" content="NTTドコモ">
@@ -79,21 +79,21 @@
             </div>
 
             <div class="tab_button_wrap">
-              <button class="tab_button is-01 active" data-tab="tab1" onclick="dataLayer.push({'event': 'sendEvent','eventCategory': 'CRP_SPE_kokusai','eventAction': 'click', 'eventLabel': 'docomo-kokusai-index_tab-docomomax'});">
+              <button class="tab_button is-01 active" data-tab="new_plan" onclick="dataLayer.push({'event': 'sendEvent','eventCategory': 'CRP_SPE_kokusai','eventAction': 'click', 'eventLabel': 'docomo-kokusai-index_tab-docomomax'});">
                 <img src="/special_contents/kokusai/docomo_kokusai/images/tab_img_01.svg" width="228" height="70" loading="lazy" alt="ドコモMAXドコモポイ活MAX">
               </button>
-              <button class="tab_button is-02" data-tab="tab2" onclick="dataLayer.push({'event': 'sendEvent','eventCategory': 'CRP_SPE_kokusai','eventAction': 'click', 'eventLabel': 'docomo-kokusai-index_tab-ahamo'});">
+              <button class="tab_button is-02" data-tab="ahamo" onclick="dataLayer.push({'event': 'sendEvent','eventCategory': 'CRP_SPE_kokusai','eventAction': 'click', 'eventLabel': 'docomo-kokusai-index_tab-ahamo'});">
                 <picture>
                   <source media="(max-width: 767px)" srcset="/special_contents/kokusai/docomo_kokusai/images/tab_img_02_sp.svg" width="97" height="69">
                   <img src="/special_contents/kokusai/docomo_kokusai/images/tab_img_02.svg" width="212" height="105" loading="lazy" alt="オンライン専用プランahamo">
                 </picture>
               </button>
-              <button class="tab_button is-03" data-tab="tab3" onclick="dataLayer.push({'event': 'sendEvent','eventCategory': 'CRP_SPE_kokusai','eventAction': 'click', 'eventLabel': 'docomo-kokusai-index_tab-sonomama-giga'});">
+              <button class="tab_button is-03" data-tab="sonomama-giga" onclick="dataLayer.push({'event': 'sendEvent','eventCategory': 'CRP_SPE_kokusai','eventAction': 'click', 'eventLabel': 'docomo-kokusai-index_tab-sonomama-giga'});">
                 <img src="/special_contents/kokusai/docomo_kokusai/images/tab_img_03.png" width="471" height="154" loading="lazy" alt="世界そのままギカ">
               </button>
             </div>
 
-            <div id="tab1" class="tab_content active">
+            <div id="new_plan" class="tab_content active">
               <div class="tab_content_01">
                 <div class="js-anima-up js_main_image main_image">
                   <img src="/special_contents/kokusai/docomo_kokusai/images/tab1_icon_01.svg" width="221" height="244" loading="lazy" class="icon icon_01" alt="">
@@ -347,8 +347,8 @@
                     <div class="js-anima-up button_col">
                       <p class="button_title is-blue">新たにドコモを契約する方</p>
                       <div class="button_list">
-                        <a href="https://onlineshop.smt.docomo.ne.jp/supports/max_plan_guide/index.html?xcid=OLS_max_plan_guide_from_CRP_202506_max_poikatsu-max_kokusai_sim-only&utm_source=crp&utm_medium=owned&utm_campaign=ols_202506_max_poikatsu-max_kokusai&utm_content=202506_max_poikatsu-max_max_plan_guide_kokusai_sim-only" class="c-button01 button is-blue" onclick="dataLayer.push({'event': 'sendEvent','eventCategory': 'CRP_SPE_kokusai','eventAction': 'click', 'eventLabel': 'docomo-kokusai-index_to-sim'});">SIMのみで契約する<span class="note">おトクなキャンペーン実施中</span></a>
-                        <a href="https://onlineshop.smt.docomo.ne.jp/supports/max_plan_guide/index.html?model=1&xcid=OLS_max_plan_guide_from_CRP_202506_max_poikatsu-max_kokusai_with_product&utm_source=crp&utm_medium=owned&utm_campaign=ols_202506_max_poikatsu-max_kokusai&utm_content=202506_max_poikatsu-max_max_plan_guide_kokusai_with_product" class="c-button01 button is-blue" onclick="dataLayer.push({'event': 'sendEvent','eventCategory': 'CRP_SPE_kokusai','eventAction': 'click', 'eventLabel': 'docomo-kokusai-index_to-keitai'});">機種を一緒に購入する</a>
+                        <a href="https://onlineshop.docomo.ne.jp/products/exclusive/sim?xcid=OLS_sim_from_CRP_202508_max-poikatsu-max_kokusai_sim-only&utm_source=corp_special&utm_medium=owned&utm_campaign=ols_202508_max-poikatsu-max-kokusai&utm_content=202508_max-poikatsu-max_sim_kokusai_sim-only" class="c-button01 button is-blue" onclick="dataLayer.push({'event': 'sendEvent','eventCategory': 'CRP_SPE_kokusai','eventAction': 'click', 'eventLabel': 'docomo-kokusai-index_to-sim'});">SIMのみで契約する<span class="note">おトクなキャンペーン実施中</span></a>
+                        <a href="https://onlineshop.docomo.ne.jp/products/mobile?xcid=OLS_mobile_from_CRP_202508_max-poikatsu-max_kokusai_with-product&utm_source=corp_special&utm_medium=owned&utm_campaign=ols_202508_max-poikatsu-max-kokusai&utm_content=202508_max-poikatsu-max_mobile_kokusai_with-product" class="c-button01 button is-blue" onclick="dataLayer.push({'event': 'sendEvent','eventCategory': 'CRP_SPE_kokusai','eventAction': 'click', 'eventLabel': 'docomo-kokusai-index_to-keitai'});">機種を一緒に購入する</a>
                       </div>
                     </div>
                     <div class="js-anima-up button_col">
@@ -362,7 +362,7 @@
                 </div>
               </div>
             </div>
-            <div id="tab2" class="tab_content">
+            <div id="ahamo" class="tab_content">
               <div class="tab_content_02">
                 <div class="js-anima-up js_main_image main_image">
                   <img class="icon icon_01" src="/special_contents/kokusai/docomo_kokusai/images/tab2_icon_01.svg" width="319" height="181" loading="lazy" alt="">
@@ -480,7 +480,7 @@
                 </div>
               </div>
             </div>
-            <div id="tab3" class="tab_content">
+            <div id="sonomama-giga" class="tab_content">
               <div class="tab_content_03">
                 <div class="js-anima-up js_main_image main_image">
                   <img class="icon icon_01" src="/special_contents/kokusai/docomo_kokusai/images/tab3_icon_01.svg" width="295" height="288" loading="lazy" alt="">
@@ -616,8 +616,8 @@
             <div class="button_col">
               <p class="button_title is-blue">新たにドコモを契約する方</p>
               <div class="button_list">
-                <a href="https://onlineshop.smt.docomo.ne.jp/supports/max_plan_guide/index.html?xcid=OLS_max_plan_guide_from_CRP_202506_max_poikatsu-max_kokusai_sim-only&utm_source=crp&utm_medium=owned&utm_campaign=ols_202506_max_poikatsu-max_kokusai&utm_content=202506_max_poikatsu-max_max_plan_guide_kokusai_sim-only" class="c-button01 button is-blue" onclick="dataLayer.push({'event': 'sendEvent','eventCategory': 'CRP_SPE_kokusai','eventAction': 'click', 'eventLabel': 'docomo-kokusai-index_follow-to-sim'});">SIMのみで<br class="sp">契約する<span class="note">おトクな<br class="sp">キャンペーン実施中</span></a>
-                <a href="https://onlineshop.smt.docomo.ne.jp/supports/max_plan_guide/index.html?model=1&xcid=OLS_max_plan_guide_from_CRP_202506_max_poikatsu-max_kokusai_with_product&utm_source=crp&utm_medium=owned&utm_campaign=ols_202506_max_poikatsu-max_kokusai&utm_content=202506_max_poikatsu-max_max_plan_guide_kokusai_with_product" class="c-button01 button is-blue" onclick="dataLayer.push({'event': 'sendEvent','eventCategory': 'CRP_SPE_kokusai','eventAction': 'click', 'eventLabel': 'docomo-kokusai-index_follow-to-keitai'});">機種を一緒に<br class="sp">購入する</a>
+                <a href="https://onlineshop.docomo.ne.jp/products/exclusive/sim?xcid=OLS_sim_from_CRP_202508_max-poikatsu-max_kokusai_sim-only&utm_source=corp_special&utm_medium=owned&utm_campaign=ols_202508_max-poikatsu-max-kokusai&utm_content=202508_max-poikatsu-max_sim_kokusai_sim-only" class="c-button01 button is-blue" onclick="dataLayer.push({'event': 'sendEvent','eventCategory': 'CRP_SPE_kokusai','eventAction': 'click', 'eventLabel': 'docomo-kokusai-index_follow-to-sim'});">SIMのみで<br class="sp">契約する<span class="note">おトクな<br class="sp">キャンペーン実施中</span></a>
+                <a href="https://onlineshop.docomo.ne.jp/products/mobile?xcid=OLS_mobile_from_CRP_202508_max-poikatsu-max_kokusai_with-product&utm_source=corp_special&utm_medium=owned&utm_campaign=ols_202508_max-poikatsu-max-kokusai&utm_content=202508_max-poikatsu-max_mobile_kokusai_with-product" class="c-button01 button is-blue" onclick="dataLayer.push({'event': 'sendEvent','eventCategory': 'CRP_SPE_kokusai','eventAction': 'click', 'eventLabel': 'docomo-kokusai-index_follow-to-keitai'});">機種を一緒に<br class="sp">購入する</a>
               </div>
             </div>
             <div class="button_col">
