--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <meta name="twitter:card" content="summary_large_image">
     <meta property="og:type" content="article">
     <meta property="og:url" content="https://www.docomo.ne.jp/special_contents/kokusai/docomo_kokusai/">
-    <meta property="og:image" content="/special_contents/kokusai/docomo_kokusai/images/bnr_sns.png">
+    <meta property="og:image" content="https://www.docomo.ne.jp/special_contents/kokusai/docomo_kokusai/images/bnr_sns.png?v=250806">
     <meta property="og:title" content="ドコモのスマホは海外でもそのまま使える | NTTドコモ">
     <meta property="og:description" content="ドコモ MAX・ahamo・世界そのままギガ | ニーズに合わせた料金プランや定額オプションが充実！">
     <meta property="og:site_name" content="NTTドコモ">
@@ -117,10 +117,6 @@
                     <p class="txt txt_04">
                       <span>※</span>
                       <span class="txt_sub">一部対象外の地域があります。詳しくは<a href="https://www.docomo.ne.jp/service/world/roaming/charge/web.html#anc-01" class="link" onclick="dataLayer.push({'event': 'sendEvent','eventCategory': 'CRP_SPE_kokusai','eventAction': 'click', 'eventLabel': 'docomo-kokusai-index_link-roaming-charge'});">こちら</a>をご確認ください。</span>
-                    </p>
-                    <p class="txt txt_05">
-                      <span>※</span>
-                      2025年秋以降、月間利用可能データ量を海外200以上の国・地域で最大30GB・15日まで追加料金なしでご利用になれます。
                     </p>
                   </div>
                 </div>
@@ -331,7 +327,7 @@
                     </div>
                   </div>
                   <p class="js-anima-up description">
-                    ※対象契約は5Gです。※5Gの提供エリアは一部に限られます。※対応機種のご利用が必要です。※割引対象回線の月額料金が日割りとなる場合、割引額も日割りとなります。​＊1 大量通信時などに通信制限がかかる場合があります。 ​＊2 同一「ファミリー割引」グループ内における音声通話が可能な料金プラン（「2in1」「キッズケータイプラス」「キッズケータイプラン」「irumo（0.5GB）」を除く）契約回線がカウント対象、月額料金から割引きます。 ​＊3 ドコモのご利用継続期間が20年以上のお客さまは220円/月、10年以上のお客さまは110円/月を月額料金から割引きます。ただし、2025年6月～9月のご利用分においては、「ドコモMAX」の場合ご利用データ量が「1GB以下/月」のお客さまは対象外となります。​＊4 終了時期未定で、「dカード」を定期支払いに設定いただいたお客さまを対象に、カード券種に関係なく550円（税込）/月を割引くキャンペーンを実施いたします。キャンペーン終了後は毎月の割引額が「ｄカード PLATINUM・dカード GOLD・dカード GOLD U」は550円（税込） 、「dカード」は220円（税込）となります。 ​＊5 「ドコモ光」または「home 5G プラン」契約者と同一「ファミリー割引」グループ内の「ドコモ MAX」「ドコモ ポイ活 MAX」「ドコモ ポイ活 20」「ドコモ mini」の契約者が対象です。適用には「ドコモ光」または「home 5G プラン」のご契約が必要となり、別途「ドコモ光」または「home 5G」の月額費用がかかります（「ドコモ光」の場合、プロバイダ込・1ギガ・解約金（戸建：5,500円（税込）/マンション：4,180円（税込））有で２年定期契約の場合月4,400円（税込）～5,940円（税込）。「home 5G プラン」の場合、月4,950円（税込）（※2025年7月以降5,280円）と別途HR01/HR02のご購入が必要）。​＊6 同一「ファミリー割引」グループ内に、「ドコモでんき」のペア回線（「ドコモでんき」と対になる携帯電話回線）が含まれている場合、同一「ファミリー割引」グループ内の対象料金プランを契約する各回線に対してそれぞれ割引が適用となります。適用には「ドコモでんき」のご契約が必要となり、「ドコモでんき」は別途料金がかかります。各エリアごとの料金についてはドコモのホームページをご確認ください。​＊7 100円(税込)未満の決済は特典進呈の対象外となります。その他一部対象外決済等条件があります。​＊8 キャンペーン期間中（終期未定）はご利用料金の支払い方法に設定しているdカードの券種に関わらず、進呈率は10%となります（ご利用携帯電話番号登録必要）​＊9 当社提供の他Amazonプライム割引特典と重畳はできません。本特典が優先適用されます。 ​＊10 一部対象外の地域あり。詳細はドコモホームページの「世界そのままギガ」をご確認ください。
+                    ※対象契約は5Gです。※5Gの提供エリアは一部に限られます。※対応機種のご利用が必要です。※割引対象回線の月額料金が日割りとなる場合、割引額も日割りとなります。​＊1 大量通信時などに通信制限がかかる場合があります。 ​＊2 同一「ファミリー割引」グループ内における音声通話が可能な料金プラン（「2in1」「キッズケータイプラス」「キッズケータイプラン」「irumo（0.5GB）」を除く）契約回線がカウント対象、月額料金から割引きます。 ​＊3 ドコモのご利用継続期間が20年以上のお客さまは220円/月、10年以上のお客さまは110円/月を月額料金から割引きます。ただし、2025年6月～9月のご利用分においては、「ドコモMAX」の場合ご利用データ量が「1GB以下/月」のお客さまは対象外となります。​＊4 終了時期未定で、「dカード」を定期支払いに設定いただいたお客さまを対象に、カード券種に関係なく550円（税込）/月を割引くキャンペーンを実施いたします。キャンペーン終了後は毎月の割引額が「ｄカード PLATINUM・dカード GOLD・dカード GOLD U」は550円（税込） 、「dカード」は220円（税込）となります。 ​＊5 「ドコモ光」または「home 5G プラン」契約者と同一「ファミリー割引」グループ内の「ドコモ MAX」「ドコモ ポイ活 MAX」「ドコモ ポイ活 20」「ドコモ mini」の契約者が対象です。適用には「ドコモ光」または「home 5G プラン」のご契約が必要となり、別途「ドコモ光」または「home 5G」の月額費用がかかります（「ドコモ光」の場合、プロバイダ込・1ギガ・解約金（戸建：5,500円（税込）/マンション：4,180円（税込））有で２年定期契約の場合月4,400円（税込）～5,940円（税込）。「home 5G プラン」の場合、月4,950円（税込）（※2025年7月以降5,280円）と別途HR01/HR02のご購入が必要）。​＊6 同一「ファミリー割引」グループ内に、「ドコモでんき」のペア回線（「ドコモでんき」と対になる携帯電話回線）が含まれている場合、同一「ファミリー割引」グループ内の対象料金プランを契約する各回線に対してそれぞれ割引が適用となります。適用には「ドコモでんき」のご契約が必要となり、「ドコモでんき」は別途料金がかかります。各エリアごとの料金についてはドコモのホームページをご確認ください。​＊7 100円(税込)未満の決済は特典進呈の対象外となります。その他一部対象外決済等条件があります。​＊8 キャンペーン期間中（終期未定）はご利用料金の支払い方法に設定しているdカードの券種に関わらず、進呈率は10%となります（ご利用携帯電話番号登録必要）​＊9 当社提供の他Amazonプライム割引特典と重畳はできません。本特典が優先適用されます。
                   </p>
                 </div>
                 <div class="img_line">
@@ -347,7 +343,7 @@
                     <div class="js-anima-up button_col">
                       <p class="button_title is-blue">新たにドコモを契約する方</p>
                       <div class="button_list">
-                        <a href="https://onlineshop.docomo.ne.jp/products/exclusive/sim?xcid=OLS_sim_from_CRP_202508_max-poikatsu-max_kokusai_sim-only&utm_source=corp_special&utm_medium=owned&utm_campaign=ols_202508_max-poikatsu-max-kokusai&utm_content=202508_max-poikatsu-max_sim_kokusai_sim-only" class="c-button01 button is-blue" onclick="dataLayer.push({'event': 'sendEvent','eventCategory': 'CRP_SPE_kokusai','eventAction': 'click', 'eventLabel': 'docomo-kokusai-index_to-sim'});">SIMのみで契約する<span class="note">おトクなキャンペーン実施中</span></a>
+                        <a href="https://onlineshop.docomo.ne.jp/products/exclusive/sim?xcid=OLS_sim_from_CRP_202508_max-poikatsu-max_kokusai_sim-only&utm_source=corp_special&utm_medium=owned&utm_campaign=ols_202508_max-poikatsu-max-kokusai&utm_content=202508_max-poikatsu-max_sim_kokusai_sim-only" class="c-button01 button is-blue" onclick="dataLayer.push({'event': 'sendEvent','eventCategory': 'CRP_SPE_kokusai','eventAction': 'click', 'eventLabel': 'docomo-kokusai-index_to-sim'});">SIMのみで契約する</a>
                         <a href="https://onlineshop.docomo.ne.jp/products/mobile?xcid=OLS_mobile_from_CRP_202508_max-poikatsu-max_kokusai_with-product&utm_source=corp_special&utm_medium=owned&utm_campaign=ols_202508_max-poikatsu-max-kokusai&utm_content=202508_max-poikatsu-max_mobile_kokusai_with-product" class="c-button01 button is-blue" onclick="dataLayer.push({'event': 'sendEvent','eventCategory': 'CRP_SPE_kokusai','eventAction': 'click', 'eventLabel': 'docomo-kokusai-index_to-keitai'});">機種を一緒に購入する</a>
                       </div>
                     </div>
@@ -616,7 +612,7 @@
             <div class="button_col">
               <p class="button_title is-blue">新たにドコモを契約する方</p>
               <div class="button_list">
-                <a href="https://onlineshop.docomo.ne.jp/products/exclusive/sim?xcid=OLS_sim_from_CRP_202508_max-poikatsu-max_kokusai_sim-only&utm_source=corp_special&utm_medium=owned&utm_campaign=ols_202508_max-poikatsu-max-kokusai&utm_content=202508_max-poikatsu-max_sim_kokusai_sim-only" class="c-button01 button is-blue" onclick="dataLayer.push({'event': 'sendEvent','eventCategory': 'CRP_SPE_kokusai','eventAction': 'click', 'eventLabel': 'docomo-kokusai-index_follow-to-sim'});">SIMのみで<br class="sp">契約する<span class="note">おトクな<br class="sp">キャンペーン実施中</span></a>
+                <a href="https://onlineshop.docomo.ne.jp/products/exclusive/sim?xcid=OLS_sim_from_CRP_202508_max-poikatsu-max_kokusai_sim-only&utm_source=corp_special&utm_medium=owned&utm_campaign=ols_202508_max-poikatsu-max-kokusai&utm_content=202508_max-poikatsu-max_sim_kokusai_sim-only" class="c-button01 button is-blue" onclick="dataLayer.push({'event': 'sendEvent','eventCategory': 'CRP_SPE_kokusai','eventAction': 'click', 'eventLabel': 'docomo-kokusai-index_follow-to-sim'});">SIMのみで<br class="sp">契約する</a>
                 <a href="https://onlineshop.docomo.ne.jp/products/mobile?xcid=OLS_mobile_from_CRP_202508_max-poikatsu-max_kokusai_with-product&utm_source=corp_special&utm_medium=owned&utm_campaign=ols_202508_max-poikatsu-max-kokusai&utm_content=202508_max-poikatsu-max_mobile_kokusai_with-product" class="c-button01 button is-blue" onclick="dataLayer.push({'event': 'sendEvent','eventCategory': 'CRP_SPE_kokusai','eventAction': 'click', 'eventLabel': 'docomo-kokusai-index_follow-to-keitai'});">機種を一緒に<br class="sp">購入する</a>
               </div>
             </div>
