--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                     </p>
                     <p class="txt txt_04">
                       <span>※</span>
-                      <span class="txt_sub">一部対象外の地域があります。詳しくは<a href="https://www.docomo.ne.jp/service/world/roaming/charge/web.html#anc-01" class="link" onclick="dataLayer.push({'event': 'sendEvent','eventCategory': 'CRP_SPE_kokusai','eventAction': 'click', 'eventLabel': 'docomo-kokusai-index_link-roaming-charge'});">こちら</a>をご確認ください。</span>
+                      <span class="txt_sub is-no-flex">一部対象外の地域があります。詳しくは<a href="https://www.docomo.ne.jp/service/world/roaming/charge/web.html#anc-01" class="link" onclick="dataLayer.push({'event': 'sendEvent','eventCategory': 'CRP_SPE_kokusai','eventAction': 'click', 'eventLabel': 'docomo-kokusai-index_link-roaming-charge'});">こちら</a>をご確認ください。</span>
                     </p>
                   </div>
                 </div>
