--- a/index.html
+++ b/index.html
@@ -133,6 +133,27 @@
                       <div class="js-anima-up logo">
                         <img src="/special_contents/kokusai/docomo_kokusai/images/tab1_img_02.svg" width="304" height="54" loading="lazy" class="c_w_100" alt="ドコモMAX">
                       </div>
+                      <div class="js-anima-up price_package is-red">
+                        <p class="title">
+                          割引適用後料金
+                          <span class="desc">※1GB/月以下をご利用の場合の割引適用後価格は、<br class="sp">2025年9月ご利用分までは2,618円/月</span>
+                        </p>
+                        <div class="content">
+                          <div class="item">
+                            <p class="capacity">～ <span class="f_roboto">1GB</span></p>
+                            <p class="cost"><span class="f_roboto">2,398</span>円</p>
+                          </div>
+                          <div class="item">
+                            <p class="capacity"><span class="f_roboto">1GB</span>超 ～ <span class="f_roboto">3GB</span></p>
+                            <p class="cost"><span class="f_roboto">3,498</span>円</p>
+                          </div>
+                          <div class="item">
+                            <p class="capacity"><span class="f_roboto">3GB</span>超 ～ 無制限<span class="num">＊1</span></p>
+                            <p class="cost"><span class="f_roboto">5,148</span>円</p>
+                          </div>
+                        </div>
+                      </div>
+                      <p class="price_desc">〈割引適用後料金内訳〉</p>
                       <div class="js-anima-up price_package">
                         <p class="title">基本料金</p>
                         <div class="content">
@@ -188,31 +209,23 @@
                           </div>
                         </div>
                       </div>
-                      <div class="js-anima-up price_package is-red">
-                        <p class="title">
-                          割引適用後料金
-                          <span class="desc">※1GB/月以下をご利用の場合の割引適用後価格は、<br class="sp">2025年9月ご利用分までは2,618円/月</span>
-                        </p>
-                        <div class="content">
-                          <div class="item">
-                            <p class="capacity">～ <span class="f_roboto">1GB</span></p>
-                            <p class="cost"><span class="f_roboto">2,398</span>円</p>
-                          </div>
-                          <div class="item">
-                            <p class="capacity"><span class="f_roboto">1GB</span>超 ～ <span class="f_roboto">3GB</span></p>
-                            <p class="cost"><span class="f_roboto">3,498</span>円</p>
-                          </div>
-                          <div class="item">
-                            <p class="capacity"><span class="f_roboto">3GB</span>超 ～ 無制限<span class="num">＊1</span></p>
-                            <p class="cost"><span class="f_roboto">5,148</span>円</p>
-                          </div>
-                        </div>
-                      </div>
                     </div>
                     <div class="box_fee_item is-gold">
                       <div class="js-anima-up logo">
                         <img src="/special_contents/kokusai/docomo_kokusai/images/tab1_img_03.svg" width="450" height="56" loading="lazy" class="c_w_100" alt="ドコモポイ活MAX">
                       </div>
+                      <div class="js-anima-up price_package is-one-col is-gold">
+                        <p class="title">
+                          ポイント充当後実質価格
+                          <span class="desc">※割引適用後の基本料金7,680円（税抜）に獲得<br class="sp">した特典最大5,000ptを<br class="pc">充当した場合の請求金<br class="sp">額（ポイント充当後の金額に消費税が加算）​</span>
+                        </p>
+                        <div class="content">
+                          <div class="item">
+                            <p class="cost"><span class="f_roboto">2,948</span>円</p>
+                          </div>
+                        </div>
+                      </div>
+                      <p class="price_desc">〈割引適用後料金内訳〉</p>
                       <div class="js-anima-up price_package is-one-col">
                         <p class="title">基本料金</p>
                         <div class="content">
@@ -271,17 +284,6 @@
                           <p class="number">上限<span class="f_roboto">5,000<span class="pt">pt</span></span>/月</p>
                         </div>
                         <p class="note">税込 約50,000円<span class="num">＊8</span>以上のお買物でゲット​</p>
-                      </div>
-                      <div class="js-anima-up price_package is-one-col is-gold">
-                        <p class="title">
-                          ポイント充当後実質価格
-                          <span class="desc">※割引適用後の基本料金7,680円（税抜）に獲得<br class="sp">した特典最大5,000ptを<br class="pc">充当した場合の請求金<br class="sp">額（ポイント充当後の金額に消費税が加算）​</span>
-                        </p>
-                        <div class="content">
-                          <div class="item">
-                            <p class="cost"><span class="f_roboto">2,948</span>円</p>
-                          </div>
-                        </div>
                       </div>
                     </div>
                   </div>
