update from customer

--- a/index.html
+++ b/index.html
@@ -317,7 +317,7 @@
                           <p class="txt-big">おトク！</p>
                           <p class="txt-note pc">
                             ※ 2025年6月～9月のご利用分においては、「ドコモ MAX」の場合<br>
-                            .　ご利用データ量が「1GB以下/月」のお客さまは対象外​
+                            　 ご利用データ量が「1GB以下/月」のお客さまは対象外​
                           </p>
                           <p class="txt-note sp">
                             ※ 2025年6月～9月のご利用分においては、<br>
